[lworld] C2 compilation fails due to infinite loop in PhaseIterGVN::optimize

XMLWordPrintable

       319 LoadI === _ 571 318 [[ 320 ]] @compiler/valhalla/inlinetypes/MyValue4:exact+16 *, name=c, idx=6; #int !jvms: TestGenerated::test14 @ bci:26 (line 213)
       320 InlineTypePtr === _ 573 317 319 [[ 522 ]] #compiler/valhalla/inlinetypes/MyValue4:NotNull:exact * Oop:compiler/valhalla/inlinetypes/MyValue4:NotNull:exact * !orig=[322] !jvms: TestGenerated::test14 @ bci:26 (line 213)
       522 Phi === 214 320 573 [[ 573 ]] #compiler/valhalla/inlinetypes/MyValue4:exact * Oop:compiler/valhalla/inlinetypes/MyValue4:exact * !orig=[565],[141],[219] !jvms: TestGenerated::test14 @ bci:36 (line 216)
       573 Phi === 569 69 522 [[ 522 320 318 318 316 316 ]] #compiler/valhalla/inlinetypes/MyValue4:exact * Oop:compiler/valhalla/inlinetypes/MyValue4:exact * !orig=[141],[219] !jvms: TestGenerated::test14 @ bci:39 (line 216)
       318 AddP === _ 573 573 74 [[ 319 ]] Oop:compiler/valhalla/inlinetypes/MyValue4:exact+16 * !jvms: TestGenerated::test14 @ bci:26 (line 213)
       316 AddP === _ 573 573 71 [[ 317 ]] Oop:compiler/valhalla/inlinetypes/MyValue4:exact+12 * !jvms: TestGenerated::test14 @ bci:26 (line 213)
       317 LoadS === _ 571 316 [[ 320 ]] @compiler/valhalla/inlinetypes/MyValue4:exact+12 *, name=b, idx=5; #short !jvms: TestGenerated::test14 @ bci:26 (line 213)
          0--> 317 LoadS === _ 571 316 [[ 320 ]] @compiler/valhalla/inlinetypes/MyValue4:exact+12 *, name=b, idx=5; #short !jvms: TestGenerated::test14 @ bci:26 (line 213)
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/phaseX.cpp:1144
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/phaseX.cpp:1144), pid=486042, tid=486057
      # assert(false) failed: infinite loop in PhaseIterGVN::optimize

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: